--- a/JobApplications/Views/Job/Add.cshtml
+++ b/JobApplications/Views/Job/Add.cshtml
@@ -1,5 +1,5 @@
-﻿@using JobApplications.Data.Models
-@model Job
+﻿@using JobApplications.DTOs
+@model JobFormDto
 
 <div class="row">
     <div class="col-sm-12 offset-lg-2 col-lg-8 offset-xl-3 col-xl-6">
@@ -17,9 +17,9 @@
                 <span asp-validation-for="Salary" class="small text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Company"></label>
-                <textarea asp-for="Company" rows="4" class="form-control" placeholder="Amazon,Google,Microsoft, etc..."></textarea>
-                <span asp-validation-for="Company" class="small text-danger"></span>
+                <label asp-for="Description"></label>
+                <textarea asp-for="Description" rows="4" class="form-control"></textarea>
+                <span asp-validation-for="Description" class="small text-danger"></span>
             </div>
             
 
