Starting implementation of JobService

--- a/JobApplications/Views/Job/Edit.cshtml
+++ b/JobApplications/Views/Job/Edit.cshtml
@@ -18,15 +18,12 @@
                 <span asp-validation-for="Salary" class="small text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Company"></label>
-                <textarea asp-for="Company" rows="4" class="form-control" placeholder="Amazon,Google,Microsoft, etc..."></textarea>
-                <span asp-validation-for="Company" class="small text-danger"></span>
+                <label asp-for="Description"></label>
+                <textarea asp-for="Description" rows="4" class="form-control" placeholder="benefits ..."></textarea>
+                <span asp-validation-for="Description" class="small text-danger"></span>
             </div>
-            
 
-
-
-            <input class="btn btn-primary mt-3" type="submit" value="Save" />
+            <input class="btn btn-primary mt-3" type="submit" value="Save"/>
         </form>
     </div>
 </div>
