--- a/JobApplications/Views/Company/CompanyFormPartialView.cshtml
+++ b/JobApplications/Views/Company/CompanyFormPartialView.cshtml
@@ -13,12 +13,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="NumbersOfEmployes"></label>
-                <input asp-for="NumbersOfEmployes" class="form-control" placeholder="11,2,4....">
+                <input asp-for="NumbersOfEmployes" class="form-control" placeholder="12000,8000, etc...">
                 <span asp-validation-for="NumbersOfEmployes" class="small text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="DateOfCreation"></label>
-                <textarea asp-for="DateOfCreation" rows="1" class="form-control" placeholder="22.01.2024..."></textarea>
+                <textarea asp-for="DateOfCreation" rows="1" class="form-control" placeholder="Amazon,Google,Microsoft, etc..."></textarea>
                 <span asp-validation-for="DateOfCreation" class="small text-danger"></span>
             </div>
             <input type="hidden" asp-for="IdentityUserId" />
