--- a/JobApplications/Views/Job/_JobFormPartialView.cshtml
+++ b/JobApplications/Views/Job/_JobFormPartialView.cshtml
@@ -18,7 +18,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="WorkingHours"></label>
-                <input asp-for="WorkingHours" class="form-control"placeholder="20,40,60"> </input>
+                <input asp-for="WorkingHours" class="form-control"placeholder="20,40,60"> 
                 <span asp-validation-for="WorkingHours" class="small text-danger"></span>
             </div>
             <div class="form-group">
@@ -27,7 +27,11 @@
                 <span asp-validation-for="Description" class="small text-danger"></span>
             </div>
             
-            
+              <div class="form-group">
+                <label asp-for="Banner"></label>
+                <input asp-for="Banner" class="form-control"placeholder="Put image url of the job">     
+                <span asp-validation-for="Banner" class="small text-danger"></span>
+            </div>
 
 
 
