--- a/JobApplications/Views/Job/GetAll.cshtml
+++ b/JobApplications/Views/Job/GetAll.cshtml
@@ -20,6 +20,15 @@
                 <a asp-controller="Job" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-info">Edit</a>
             }
             
+            
+        else
+
+            {
+                <a asp-controller="Application" asp-action="ApplyForJob" asp-route-id="@item.Id" class="btn btn-info">Apply</a>
+            }
+
+            
+
         }
     </div>
 }
