Avaiabling the HR to download ad chante the status of the application and download CV

--- a/JobApplications/Areas/Company/Views/Job/GetAll.cshtml
+++ b/JobApplications/Areas/Company/Views/Job/GetAll.cshtml
@@ -13,7 +13,7 @@
         @foreach (var item in Model)
         {
             
-            <p class="bg-info">@item.Company.CompanyName - @item.Title - for salary: @item.Salary</p>
+            <p class="bg-info">@item.Company - @item.Title - for salary: @item.Salary</p>
             @if (userid == item.Company.IdentityUserId)
             {
                 <a asp-controller="Job" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-info">Delete</a>
