--- a/JobApplications/Areas/Company/Views/Company/GetAllJobs.cshtml
+++ b/JobApplications/Areas/Company/Views/Company/GetAllJobs.cshtml
@@ -1,6 +1,6 @@
-﻿@using JobApplications.Data.Models
+﻿@using JobApplications.DTOs
 @using JobApplications.Extensions
-@model List<Job>
+@model List<JobFormDto>
 
 @{
     // job ->
@@ -12,12 +12,10 @@
     <div>
         @foreach (var item in Model)
         {
-
-            
-            
+                <p class="bg-info"> @item.Title - for salary: @item.Salary</p>
                 <a asp-area="Company" asp-controller="Job" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-info">Delete</a>
                 <a asp-area="Company" asp-controller="Job" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-info">Edit</a>
-                <a asp-area="Company" asp-controller="Job" asp-action="SeeAllApplicants" asp-route-id="@item.Id"class="btn btn-info">See All Applicants</a>
+                <a asp-area="Company" asp-controller="Application" asp-action="GetAllApplicationsForAJob" asp-route-id="@item.Id"  class="btn btn-info">See All Applicants</a>
 
         }
     </div>
