--- a/JobApplications/Views/Application/ApplyForJob.cshtml
+++ b/JobApplications/Views/Application/ApplyForJob.cshtml
@@ -18,10 +18,15 @@
         <input type="hidden" asp-for="JobId" />
         <input type="hidden" asp-for="IdentityUserId" value="@Model.IdentityUserId" />
 
-        <div class="form-group">
+        @* <div class="form-group">
             <label for="CvFile">Upload your CV (PDF only):</label>
             <input type="file" class="form-control" asp-for="CvFile" />
             <span asp-validation-for="CvFile" class="text-danger"></span>
+        </div> *@
+        <div class="form-group">
+                <label asp-for="CvFile"></label>
+            <input type="file" id="files" asp-for="CvFile" />
+            <span asp-validation-for="CvFile" class="small text-danger"></span>
         </div>
 
         <button type="submit" class="btn btn-primary mt-3">Submit Application</button>
