--- a/JobApplications/Views/Shared/_Layout.cshtml
+++ b/JobApplications/Views/Shared/_Layout.cshtml
@@ -57,6 +57,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="User" asp-controller="Job" asp-action="GetAll">All Jobs</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="User" asp-controller="Job" asp-action="GetAllSavedJobs">My Saved Jobs</a>
+                            </li>
                             //saved Jobs
                         }
 
