--- a/JobApplications/Areas/Company/Views/Company/GetAllJobs.cshtml
+++ b/JobApplications/Areas/Company/Views/Company/GetAllJobs.cshtml
@@ -49,7 +49,7 @@
                 <!-- Logo and Buttons Section -->
                 <!-- To do the name of the firm-->
                 <div class="col-md-4 text-center">
-                    <img src="@item.Banner" alt="@item.CompanyName - @item.Title" class="img-fluid small-logo mb-3">
+                    <img src="@item.Banner" alt="@item.Title" class="img-fluid small-logo mb-3">
                     <div class="btn-container">
                         <a asp-area="Company" asp-controller="Job" asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm mb-1">Delete</a>
                         <a asp-area="Company" asp-controller="Job" asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm mb-1">Edit</a>
