--- a/JobApplications/Areas/Identity/Pages/Account/RegisterCompany.cshtml
+++ b/JobApplications/Areas/Identity/Pages/Account/RegisterCompany.cshtml
@@ -31,7 +31,7 @@
             
               <div class="form-group">
                 <label asp-for="Input.CompanyName"></label>
-                <input asp-for="Input.CompanyName" class="form-control" placeholder="Software Developer,DevOps etc...">
+                <input asp-for="Input.CompanyName" class="form-control" placeholder="PayPal,Amazon etc...">
                 <span asp-validation-for="Input.CompanyName" class="small text-danger"></span>
             </div>
             <div class="form-group">
